# SGA-V7

./: .gitignore  .pylintrc  README.md  requirements-dev.txt  requirements-submodule.txt  requirements.txt  setup.cfg
.github/workflows/: mypy.yml  publish-pypi.yml  pylint.yml  pytest.yml
docs/source/: conf.py  index.rst
src/relic/sga/: __init__.py  _abc.py  _apis.py  _core.py  _serializers.py  errors.py  protocols.py
src/relic/sga/v2/: __init__.py  _core.py  _serializers.py
src/relic/sga/v5/: __init__.py  _core.py  _serializers.py
src/relic/sga/v7/: __init__.py  _core.py  _serializers.py  definitions.py  serializers.py
src/relic/sga/v9/: __init__.py  _serializers.py
tests/: test_sga.py
